# vec-lib

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
benches/: vcl_benchmark.cpp  vcl_benchmark.hpp  vec16c_benchmark.rs
src/: lib.rs  vectori128.rs
tests/: test_veci128.rs
