[package]
name = "vec-lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}
aligned = "0.4.2"
criterion-plot = "0.5.0"
rand = "0.8.5"
cxx = "1.0"

[build-dependencies]
cfg_aliases = "0.1.0"
cxx-build = "1.0"

[[bench]]
name = "vec16c_benchmark"
harness = false

[lib]
name = "vec_lib"
